# zkevm-circuits

./: Cargo.toml  README.md
aggregator/: Cargo.toml  README.md
aggregator/src/: batch.rs  blob.rs  chunk.rs  constants.rs  core.rs  lib.rs  util.rs
aggregator/src/aggregation/: blob_data.rs  circuit.rs  config.rs  decoder.rs
aggregator/src/tests/: aggregation.rs  blob.rs  mock_chunk.rs
bus-mapping/: Cargo.toml
bus-mapping/src/: circuit_input_builder.rs  l2_predeployed.rs  state_db.rs
bus-mapping/src/circuit_input_builder/: block.rs  curie.rs
eth-types/src/: forks.rs  l2_predeployed.rs  lib.rs
gadgets/: Cargo.toml
gadgets/src/: blob_consistency.rs  lib.rs  util.rs
integration-tests/: .gitignore  docker-compose.yml
integration-tests/src/: lib.rs  main.rs
integration-tests/tests/: mainnet.rs
integration-tests/tx-gen/: .env.dev  .gitignore  Cargo.toml  README.md  hardhat.config.js  package-lock.json  package.json
integration-tests/tx-gen/artifacts/@openzeppelin/contracts/token/ERC20/IERC20.sol/: IERC20.dbg.json
integration-tests/tx-gen/artifacts/@openzeppelin/contracts/token/ERC20/extensions/IERC20Metadata.sol/: IERC20Metadata.dbg.json
integration-tests/tx-gen/artifacts/@openzeppelin/contracts/utils/Context.sol/: Context.dbg.json
integration-tests/tx-gen/artifacts/contracts/Token.sol/: Token.dbg.json  Token.json
integration-tests/tx-gen/contracts/: Token.sol
integration-tests/tx-gen/scripts/: deploy.js  deployWithEthers.js  transfer.js
integration-tests/tx-gen/src/abi/: Token.json  mod.rs
prover/: Cargo.toml
prover/src/: utils.rs
prover/src/aggregator/: prover.rs
prover/src/proof/: chunk.rs
prover/src/zkevm/: prover.rs
zkevm-circuits/: Cargo.toml
zkevm-circuits/src/: blob_circuit.rs  ecc_circuit.rs  evm_circuit.rs  lib.rs  pi_circuit.rs  state_circuit.rs  super_circuit.rs  table.rs  witness.rs
zkevm-circuits/src/blob_circuit/: bytes_to_blob.rs  dev.rs  scalar_field_element.rs  test.rs  util.rs
zkevm-circuits/src/evm_circuit/: execution.rs  param.rs
zkevm-circuits/src/pi_circuit/: dev.rs  test.rs
zkevm-circuits/src/witness/: blob.rs  block.rs  keccak.rs  (+3 more)
zktrie/src/: state.rs
(+11 files in other folders)
