[package]
name = "gadgets"
version = "0.1.0"
edition = "2021"
authors = ["The appliedzkp team"]
license = "MIT OR Apache-2.0"

[dependencies]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_02_02" }
sha3 = "0.7.2"
eth-types = { path = "../eth-types" }
#zkevm-circuits = { path = "../zkevm-circuits" }
digest = "0.7.6"
strum = "0.24"

rand = "0.8"

[dev-dependencies]
rand_xorshift = "0.3"
rand = "0.8"
poseidon_native = { git = "https://github.com/axiom-crypto/halo2.git", branch = "axiom/dev", package = "poseidon" }