[package]
name = "tx-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2.0", features = ["optimism"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4"